@@ -2,7 +2,7 @@
  * @brief tests of MatchSpy usage
  */
 /* Copyright 2007,2009 Lemur Consulting Ltd
- * Copyright 2009,2011 Olly Betts
+ * Copyright 2009,2011,2012 Olly Betts
  * Copyright 2010 Richard Boulton
  *
  * This program is free software; you can redistribute it and/or
@@ -111,9 +111,9 @@ static string values_to_repr(const Xapian::ValueCountMatchSpy & spy) {
     return resultrepr;
 }
 
-DEFINE_TESTCASE(matchspy2, writable)
+static void
+make_matchspy2_db(Xapian::WritableDatabase &db, const string &)
 {
-    Xapian::WritableDatabase db = get_writable_database();
     for (int c = 1; c <= 25; ++c) {
 	Xapian::Document doc;
 	doc.set_data("Document " + str(c));
@@ -137,6 +137,11 @@ DEFINE_TESTCASE(matchspy2, writable)
 
 	db.add_document(doc);
     }
+}
+
+DEFINE_TESTCASE(matchspy2, generated)
+{
+    Xapian::Database db = get_database("matchspy2", make_matchspy2_db);
 
     Xapian::ValueCountMatchSpy spy0(0);
     Xapian::ValueCountMatchSpy spy1(1);
@@ -167,32 +172,9 @@ DEFINE_TESTCASE(matchspy2, writable)
     return true;
 }
 
-DEFINE_TESTCASE(matchspy4, writable)
+DEFINE_TESTCASE(matchspy4, generated)
 {
-    Xapian::WritableDatabase db = get_writable_database();
-    for (int c = 1; c <= 25; ++c) {
-	Xapian::Document doc;
-	doc.set_data("Document " + str(c));
-	int factors = 0;
-	for (int factor = 1; factor <= c; ++factor) {
-	    doc.add_term("all");
-	    if (c % factor == 0) {
-		doc.add_term("XFACT" + str(factor));
-		++factors;
-	    }
-	}
-
-	// Number of factors.
-	doc.add_value(0, str(factors));
-	// Units digits.
-	doc.add_value(1, str(c % 10));
-	// Constant.
-	doc.add_value(2, "fish");
-	// Number of digits.
-	doc.add_value(3, str(str(c).size()));
-
-	db.add_document(doc);
-    }
+    Xapian::Database db = get_database("matchspy2", make_matchspy2_db);
 
     // We're going to run the match twice - once sorted by relevance, and once
     // sorted by a value.  This is a regression test - the matcher used to fail
